--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@radix-ui/react-navigation-menu": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.3.1",
-    "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.0",
@@ -30,7 +29,10 @@
     "react-timer-hook": "^3.0.6",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
-    "tailwindcss-animate": "^1.0.6",
+    "tailwindcss-animate": "^1.0.6"
+  },
+  "devDependencies": {
+    "@types/react": "18.2.14",
     "typescript": "5.1.3"
   }
 }
